2011-05-16  Guillaume Lazzara  <lazzara@fidji.lrde.epita.fr>

	Various small fixes in Scribo.

	* scribo/core/document.hh: Store binary image without separators.

	* scribo/filter/object_links_bbox_overlap.hh: Fix use of
	object_links structure.

	* scribo/io/img/internal/debug_img_visitor.hh: Do not draw invalid
	elements.

	* scribo/make/text_components_image.hh: Add a precondition.

	* scribo/primitive/extract/alignments.hh: Add debug guards.

	* scribo/primitive/extract/lines_h_pattern.hh,
	* scribo/primitive/extract/lines_v_pattern.hh: Fix structural
	element used for dilation.

	* scribo/text/merging.hh: Reindent comments.

	* scribo/src/Makefile.am: Add content_in_hdoc target.

2011-05-16  Guillaume Lazzara  <lazzara@fidji.lrde.epita.fr>

	Add holder information to component_info.

	* scribo/core/component_info.hh,
	* scribo/core/component_set.hh,
	* scribo/core/internal/doc_serializer.hh,
	* scribo/io/img/internal/debug_img_visitor.hh,
	* scribo/io/img/internal/draw_edges.hh,
	* scribo/io/img/internal/full_img_visitor.hh,
	* scribo/io/img/internal/non_text_img_visitor.hh,
	* scribo/io/xml/internal/extended_page_xml_visitor.hh,
	* scribo/io/xml/internal/full_xml_visitor.hh,
	* scribo/io/xml/internal/page_xml_visitor.hh,
	* scribo/util/component_outline.hh: Add a template parameter to
	component_info structure and update its use.

2011-05-16  Guillaume Lazzara  <lazzara@fidji.lrde.epita.fr>

	New specific toolchain for historical documents.

	* scribo/toolchain/content_in_hdoc.hh,
	* scribo/toolchain/internal/content_in_hdoc_functor.hh,
	* src/content_in_hdoc.cc: New.

2011-05-17  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix use of skeleton_constrained.

	* scribo/estim/components_features.hh,
	* scribo/estim/internal/compute_skeleton.hh: Here.

2011-05-12  Guillaume Lazzara  <lazzara@fidji.lrde.epita.fr>

	Update support for PAGE XML format.

	* scribo/core/tag/line.hh: Add operator<<.

	* scribo/io/xml/internal/compute_text_colour.hh: Update color
	names.
